--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: Adrián Gómez
 description: > # this means to ignore newlines until "baseurl:"
   Material theme based on <a href="http://materializecss.com">Materialize.css</a> for jekyll sites
-baseurl: "/cv"
+baseurl: "/cv.github.io"
 url: "https://adriangeerre.github.io"
 permalink: /:year/:month/:day/:title
 repository: adriangeerre/cv.github.io
