--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ paginate: 5
 
 # MatJek specific configurations
 github_profile: "https://github.com/adriangeerre"
-user: "Adrián Gómez"
+user: "Adrián Gómez Repollés"
 #user_email: "john@doe.com"
 contact_url: "https://goo.gl/tVljbV"
 google_tracking_id: "UA-96359860-1"
