--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ paginate: 5
 github_profile: "https://github.com/adriangeerre"
 user: "Adrián Gómez Repollés"
 user_email: "adriangomezrepolles@gmail.com"
-contact_url: "https://goo.gl/tVljbV"
+contact_url: "https://docs.google.com/forms/d/e/1FAIpQLScyPIbeQqXvYrcn6LyhGgqOZNJ_gdWtzuuG_JtC_1y3qiPaZQ/viewform"
 google_tracking_id: "UA-96359860-1"
 google_site_verification: "UA-96359860-1"
 disqus_shortname: "Adrián"
