--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: Adrián Gómez Repollés
 description: > # this means to ignore newlines until "baseurl:"
-  Curriculum Vitae for **Adrián** **Gómez** **Repollés** served by Github and based on <a href="http://materializecss.com">Materialize.css</a> theme for jekyll sites.
+  Curriculum Vitae of <b>Adrián Gómez Repollés</b> served by Github and based on <a href="http://materializecss.com">Materialize.css</a> theme for jekyll sites.
 baseurl: "/cv.github.io"
 url: "https://adriangeerre.github.io"
 permalink: /:year/:month/:day/:title
